--- a/closedverse_main/templates/closedverse_main/messages.html
+++ b/closedverse_main/templates/closedverse_main/messages.html
@@ -2,7 +2,7 @@
 {% load static %}{% load closedverse_tags %}{% load closedverse_user %}
 {% block main-body %}
 {% user_sidebar request user user.profile 0 True %}
-<div class="main-column">
+<div class="main-column messages">
   <div class="post-list-outline">
 
     <h2 class="label">Messages</h2>
