--- a/closedverse_main/templates/closedverse_main/notifications.html
+++ b/closedverse_main/templates/closedverse_main/notifications.html
@@ -1,7 +1,7 @@
 {% extends "closedverse_main/layout.html" %}
 {% block main-body %}{% load closedverse_tags %}{% load closedverse_user %}
 {% user_sidebar request user user.profile 0 True %}
-<div class="main-column">
+<div class="main-column messages">
   <div class="post-list-outline">
 
     <h2 class="label">{{ title }}</h2>
