--- a/closedverse_main/templates/closedverse_main/comment-view.html
+++ b/closedverse_main/templates/closedverse_main/comment-view.html
@@ -8,20 +8,52 @@
     <span>View <span class="post-user-description">{{ comment.original_post.creator.nickname }}'s post ({{ comment.original_post.trun|truncatechars:35 }})</span> for this comment.</span>
   </a>
 </div>
-<div class="post-list-outline">
+<div class="post-list-outline more">
   <div id="post-content" class="post reply-permalink-post">
     <div id="{{ comment.unique_id }}" class="other">
       <p class="community-container"><a href="{% url "main:community-view" comment.community.id %}"><img src="{{ comment.community.icon }}" class="community-icon">{{ comment.community.name }}</a></p>
+	    {% if comment.is_mine or post.del_perm %}
+		<div class="edit-buttons-content">
+				  {% if comment.is_mine and not comment.del_perm %}
+					<button type="button" class="symbol button edit-button rm-post-button" data-action="{% url "main:comment-rm" comment.id %}"><span class="symbol-label">Delete</span></button>
+					{% endif %}
+			{% if not comment.has_edit %}
+			<button type="button" class="symbol button edit-button edit-post-button"><span class="symbol-label">Edit</span></button>
+		{% endif %}
+		</div>
+	{% endif %}
+	  
       <div class="user-content">
         <a href="{% url "main:user-view" comment.creator.username %}" class="icon-container {% user_class comment.creator %}"><img src="{% avatar comment.creator.avatar comment.feeling %}" class="icon"></a>
         <div class="user-name-content">
           <p class="user-name"><a href="{% url "main:user-view" comment.creator.username %}">{{ comment.creator.nickname }}</a></p>
           <p class="timestamp-container">
             <span class="spoiler-status{% if comment.spoils %} spoiler{% endif %}">Spoilers ·</span>
-            <span class="timestamp">{% time comment.created %}</span>          </p>
+            <span class="timestamp">{% time comment.created %}</span>          
+				{% if comment.has_edit %}
+		· <span class="spoiler">Edited ({% time comment.edited %})</span>
+				{% endif %}</p>
         </div>
       </div>
       <div class="body">
+	  	{% if comment.is_mine %}
+		<div id="post-edit" class="none">
+			<form data-action="{% url "main:comment-change" comment.id %}" id="edit-form" method="post">
+			{% feeling_selector comment.feeling %}
+			<div class="textarea-container">
+				<textarea name="body" class="textarea-text textarea " maxlength="2200" placeholder="Edit your comment." data-required="">{{ comment.body }}</textarea>
+			</div>
+				<div class="post-form-footer-options">
+					<label class="spoiler-button symbol"><input id="is_spoiler" name="is_spoiler" type="checkbox" value="1">Spoilers</label>
+				</div>
+				<div class="form-buttons">
+					<button type="button" class="cancel-button gray-button">Cancel</button>
+					<button type="submit" class="post-button black-button">Submit</button>
+				</div>
+			</form>
+		</div>
+		{% endif %}
+	  	<div id="the-post">
             {% if comment.drawing %}
 			<p class="reply-content-memo"><img src="{{ comment.drawing }}" class="post-memo"></p>
 			{% else %}
@@ -37,10 +69,10 @@
 		  " data-feeling="" data-action="{% url "main:comment-add-yeah" comment.id %}" data-community-id="{{ comment.community.unique_id }}" data-url-id="{{ comment.id }}"><span class="empathy-button-text">{% empathy_txt comment.feeling comment.has_yeah %}</span></button>
           <div class="empathy symbol"><span class="symbol-label">Yeahs</span><span class="empathy-count">{{ comment.number_yeahs }}</span></div>
         </div>
+		</div>
         {% empathy_content yeahs request comment.has_yeah %}
 
-        <div class="post-meta">
-        </div>
+		
       </div>
     </div>
   </div>
