--- a/static/blueness.css
+++ b/static/blueness.css
@@ -2,16 +2,16 @@
     color: #fff !important;
 }
 .post-permalink-button:hover, .favorite-community-link.symbol, .trigger:active, #wrapper, #reply-content button.more-button:hover, .spoiler-button:hover, #sidebar-profile-status, #guide-menu:hover, .community-eyecatch-info:hover, #community-favorite:hover, #reply-content .list > li.my:hover, .big-button:hover, .sidebar-setting a:hover, .multi-timeline-post-list .post.hidden .screenshot-container, .multi-timeline-post-list .post .screenshot-container, .trigger:hover, .textarea-container .community-container, .post-form-album-content, .admin-messages .post.my, #identified-user-banner:hover, .sidebar-setting a.selected, .sidebar-container h4 a:hover, #empathy-content, .sidebar-profile .profile-comment, .post-list .recent-reply-content, .community-name .owner, .post-list-heading-button, .topic-title-input, .textarea, .empathy-button, .hidden-content-button, .community-description {
-    background-color: #161616 !important;
+    background-color: #161626 !important;
 }
 body, .favorite-community-link.symbol:hover, .post.hidden:hover, .filtering-label, .post-list .recent-reply-content .recent-reply:hover, .post-list .recent-reply-content .recent-reply-read-more-container:hover, .arrow-button:hover, #post-diary-window, .spoiler-button, .textarea-line, .dialog .window-body, .digest .post .icon-container, .icon-container .icon, #sidebar-profile-body .icon, .sidebar-container, .post .community-container, #global-menu #global-my-menu, .guest#post-permlink .guest-message p, form.search input[type="text"], form.search input[type="submit"], .warning-content, .community-card-list > li, .post-permalink-button {
-    background-color: #202020 !important;
+    background-color: #202030 !important;
 }
 body, .community-title, #footer-selector li button, #footer-inner p a, .post-list.empty, .album-list.empty, .list > .no-content, .no-content, .community-game-title, .arrow-button, .post .hidden-content button, .post .deleted-message button, .post .hidden_as_violation button, .post .hidden-content a, .post .deleted-message a, .post .hidden_as_violation a, .post .community-container-heading a, .list-content-with-icon-and-text .text, .list-content-with-icon-and-text .id-name, #sidebar-profile-body .id-name, #post-diary-window p, .sidebar-container h4 a, .post-list .empathized-user-name, .post-list .acted-user-name, .post-list .recommend-user-title, .headline h2, #post-content .post-content-text, #global-menu li a, #global-menu li button, #sidebar-profile-status .number, .community-name, .community-name a, .community-list .title, .sidebar-setting .sidebar-menu-relation:before, #reply-content button.more-button, .sidebar-profile .profile-comment, .guest#post-permlink .guest-message p, form.search input[type="text"], .community-name .owner, .post-list-heading-button, .topic-title-input, .textarea, .empathy-button, .post-permalink-button, .hidden-content-button, .community-description {
     color: #ccc !important;
 }
 input[type=text], input[type=password], input[type=email], input:not([type]), select {
-    background-color: #202020;
+    background-color: #202030;
 	color: #fff;
 	border: 1px solid #000;
     box-shadow: 0 1px 0 rgba(0, 0, 0, 0);
@@ -85,7 +85,7 @@ button.unfollow-button.button.symbol:after {
     box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0);
 }
 .empathy-button:disabled:hover {
-    background: #161616;
+    background: #161626;
     box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0);
 }
 .setting-form li {
@@ -117,7 +117,7 @@ form.search input[type="submit"] {
     border-color: transparent rgb(32, 32, 32) rgba(0, 0, 0, 0) transparent;
 }
 .post-body .multi-timeline-post-list .post-subtype-artwork .hidden-content {
-    background-color: #161616;
+    background-color: #161626;
     border-top: 1px dashed #000;
 }
 .community-list .siblings {
@@ -128,7 +128,7 @@ form.search input[type="submit"] {
     border-top: 1px solid rgb(0, 0, 0);
 }
 #main-body > .no-content {
-    background: #202020 none repeat scroll 0% 0%;
+    background: #202030 none repeat scroll 0% 0%;
     border: 1px solid #000;
     box-shadow: 0px 1px 0px #000;
 }
@@ -136,28 +136,28 @@ form.search input[type="submit"] {
     background: #424242 !important;
 }
 .tab2 a, .tab3 a {
-    background-color: #202020;
-    background: -webkit-gradient(linear, left top, left bottom, from(#202020), to(#202020), color-stop(0.5, #202020));
-    background: -webkit-linear-gradient(top, #202020 0%, #202020 50%, #202020 100%);
-    background: -moz-linear-gradient(top, #202020 0%, #202020 50%, #202020 100%);
-    background: -ms-linear-gradient(top, #202020 0%, #202020 50%, #202020 100%);
-    background: -o-linear-gradient(top, #202020 0%, #202020 50%, #202020 100%);
-    background: linear-gradient(top, #202020 0%, #202020 50%, #202020 100%);
+    background-color: #202030;
+    background: -webkit-gradient(linear, left top, left bottom, from(#202030), to(#202030), color-stop(0.5, #202030));
+    background: -webkit-linear-gradient(top, #202030 0%, #202030 50%, #202030 100%);
+    background: -moz-linear-gradient(top, #202030 0%, #202030 50%, #202030 100%);
+    background: -ms-linear-gradient(top, #202030 0%, #202030 50%, #202030 100%);
+    background: -o-linear-gradient(top, #202030 0%, #202030 50%, #202030 100%);
+    background: linear-gradient(top, #202030 0%, #202030 50%, #202030 100%);
     color: #CCCCCC;
     border: 1px solid #000;
     border-bottom-color: #000;
 }
 .album-dialog .album-close-button {
-    background: -webkit-linear-gradient(bottom, #202020, #202020);
+    background: -webkit-linear-gradient(bottom, #202030, #202030);
     border: 1px solid #000000;
 }
 .tab2 a:hover, .tab3 a:hover {
-    background: #161616;
-    -webkit-box-shadow: inset 0 1px 0 #161616, 0 2px 4px rgba(22, 22, 22, 0);
-    -moz-box-shadow: inset 0 1px 0 #161616, 0 2px 4px rgba(22, 22, 22, 0);
-    -ms-box-shadow: inset 0 1px 0 #161616, 0 2px 4px rgba(22, 22, 22, 0);
-    -o-box-shadow: inset 0 1px 0 #161616, 0 2px 4px rgba(22, 22, 22, 0);
-    box-shadow: inset 0 1px 0 #161616, 0 2px 4px rgba(22, 22, 22, 0);
+    background: #161626;
+    -webkit-box-shadow: inset 0 1px 0 #161626, 0 2px 4px rgba(22, 22, 22, 0);
+    -moz-box-shadow: inset 0 1px 0 #161626, 0 2px 4px rgba(22, 22, 22, 0);
+    -ms-box-shadow: inset 0 1px 0 #161626, 0 2px 4px rgba(22, 22, 22, 0);
+    -o-box-shadow: inset 0 1px 0 #161626, 0 2px 4px rgba(22, 22, 22, 0);
+    box-shadow: inset 0 1px 0 #161626, 0 2px 4px rgba(22, 22, 22, 0);
 }
 .tab2 > a:first-child, .tab3 > a:first-child {
     border-left: 1px solid #000;
@@ -180,22 +180,22 @@ form.search input[type="submit"] {
     box-shadow: inset 0 0.5px 0 rgba(0, 0, 0, 0.9);
 }
 .topic-categories-container {
-    background: #202020;
-    -webkit-box-shadow: 0 1px 0 #202020;
-    -moz-box-shadow: 0 1px 0 #202020;
-    -ms-box-shadow: 0 1px 0 #202020;
-    -o-box-shadow: 0 1px 0 #202020;
-    box-shadow: 0 1px 0 #202020;
+    background: #202030;
+    -webkit-box-shadow: 0 1px 0 #202030;
+    -moz-box-shadow: 0 1px 0 #202030;
+    -ms-box-shadow: 0 1px 0 #202030;
+    -o-box-shadow: 0 1px 0 #202030;
+    box-shadow: 0 1px 0 #202030;
 }
 .button {
     border: 1px solid rgb(0, 0, 0);
     border-bottom-color: #000;
-    background: #202020;
+    background: #202030;
     color: #ccc;
     box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0);
 }
 .button:hover {
-    background: #161616;
+    background: #161626;
     box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0);
 }
 .post-list a.another-posts {
@@ -211,7 +211,7 @@ form.search input[type="submit"] {
 }
 #sidebar-profile-status li a > span {
     display: block;
-    border-right: 1px solid #202020;
+    border-right: 1px solid #202030;
 }
 #global-menu li#global-menu-mymenu .icon-container img {
     border: 1px solid #000;
@@ -227,7 +227,7 @@ form.search input[type="submit"] {
 }
 #global-menu #global-my-menu:after {
     border-color: transparent;
-    border-bottom-color: #202020;
+    border-bottom-color: #202030;
 }
 .list-content-with-icon-and-text li {
     border-top: 1px solid #000;
@@ -242,30 +242,30 @@ form.search input[type="submit"] {
     color: #696666;
 }
 #community-eyecatch-main > div {
-    background: #202020;
+    background: #202030;
     border: 1px solid rgb(0, 0, 0);
 }
 #guide-menu {
-    background: #202020;
+    background: #202030;
     border: 1px solid rgb(0, 0, 0);
 }
 #guide-menu .arrow-button {
     border-top: 1px solid #000;
 }
 #community-favorite {
-    background: #202020;
+    background: #202030;
     border: 1px solid rgb(0, 0, 0);
 }
 #identified-user-banner {
-    background: #202020;
+    background: #202030;
     border: 1px solid rgb(0, 0, 0);
 }
 .digest .post .body {
-    background: #202020;
+    background: #202030;
     border: 1px solid rgb(0, 0, 0);
 }
 .digest .post .body:after {
-    border-color: transparent #202020 transparent transparent;
+    border-color: transparent #202030 transparent transparent;
 }
 .digest .post .body:before {
     border-color: transparent #000 transparent transparent;
@@ -296,7 +296,7 @@ form.search input[type="submit"] {
     border-color: #000;
 }
 #sub-body {
-    background: #202020;
+    background: #202030;
     border-bottom: 2px solid #000;
     box-shadow: 0 0 15px #000;
 }
@@ -323,7 +323,7 @@ form.search input[type="submit"] {
 	background-color: #313131;
 }
 .guest #about {
-    background: #202020;
+    background: #202030;
     border-bottom: 2px solid #000;
 }
 .guest .guest-terms-link:hover {
@@ -351,7 +351,7 @@ h2.label-topic_post, h2.label-topic {
     color: #e8316e;
 }
 .post-list-outline {
-    background: #202020;
+    background: #202030;
     border: 1px solid rgb(0, 0, 0);
     -webkit-box-shadow: 0 1px 0px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0 1px 0px rgba(0, 0, 0, 0.2);
@@ -387,7 +387,7 @@ h2.label-topic_post, h2.label-topic {
     -ms-box-shadow: 0 1px 0px rgba(0, 0, 0, 0.2);
     -o-box-shadow: 0 1px 0px rgba(0, 0, 0, 0.2);
     box-shadow: 0 1px 0px rgba(0, 0, 0, 0.2);
-    background-color: #202020;
+    background-color: #202030;
     color: #ccc;
 }
 form.search {
@@ -399,11 +399,11 @@ form.search {
     border-top: 1px solid #000;
 }
 .user-data .note {
-    border-bottom: 2px dashed #161616;
+    border-bottom: 2px dashed #161626;
     color: #ccc;
 }
 #footer {
-    background-color: #1d1d1d;
+    background-color: #1d1d2d;
 }
 #sidebar-profile-body .icon {
     border: 1px solid #000;
@@ -429,7 +429,7 @@ border-top: 1px solid #222;
 }
 .messages .post.my,
 #reply-content .list .my {
-    background-color: #191818;
+    background-color: #191828;
 }
 #reply-content .info-reply-list + button.more-button, #reply-content .more-button + .more-button {
     border-top: 1px solid #000;
@@ -452,9 +452,9 @@ border-top: 1px solid #222;
 }
 code,
 pre {
-border: 1px solid #404040 !important;
+border: 1px solid #404050 !important;
 color: #CCC !important;
-background-color: #191818 !important;
+background-color: #191828 !important;
 }
 @media screen and (max-width: 980px) {
 	#global-menu #global-menu-list > ul > li > a:hover {
@@ -479,3 +479,4 @@ background: transparent;
 }
 
 /*--------Mostly all of the dark theme was made by CodyMKW, please make sure he's noticed--------*/
+/*PF2M also modded this hack, not to mention myself making it complete*/
