trying to fix help

--- a/closedverse_main/templates/closedverse_main/help/faq.html
+++ b/closedverse_main/templates/closedverse_main/help/faq.html
@@ -7,9 +7,18 @@
     <div id="guide" class="help-content">
       <div class="faq">
         <p>Hey there! If you have any questions about Closedverse, this page aims to answer them.</p>
-		<br>
-		(Todo: Finish this, perhaps make a form for questions?)
 		
+		<h2>Something's wrong (or I want to ask a question for this)</h2>
+		<p>Well then, no worries, you can instantly make a bug report or a suggestion via the Feedback button in your User Menu (top right corner). Enjoy!</p>
+		<h2>I did something, but it didn't actually do it.</h2>
+		<p>If you perform an action (Yeah a post, edit a post, delete a post, follow/unfollow someone, change profile settings, etc..) but, even after refreshing, it appears that nothing has happened, then something has gone wrong.<br>
+		This site does not return errors if there is an error (example, if you Yeah your own post on Miiverse, the server tells you that you cannot do that, however this one just tells you that it was successful), so if this happens, then something is wrong.<br>If you're either confused or sure this isn't a problem on your side, let me know and I'll look into it.</p>
+		<h2>I did something, but then it suddenly reverted itself, but then I refreshed and it did what I intended it to do.</h2>
+		<p>If you edit a post, set a post as a favorite, send a friend request, etc. and then it appears that didn't go through but refreshing the page makes the changes, this means that my database is slow.<br>I don't expect this to happen much, but at times, the database can pretend to be finished when it's not, your browser could refresh after an action, and the database still isn't done.<br>Again, this is only a problem I've been encountering on my development server, so I don't expect this to be a thing here.</p>
+		<h2>The color looks ugly.</h2>
+		<p>Sorry, but the dark black theme was too dark.</p>
+		
+		<h2>Less question-y questions</h2>
         <h2>Closedverse? What?</h2>
         <p>Yes, that's the name I'm using.</p>
         <p>This entire thing was supposed to be an Openverse parody and was meant to be made completely and entirely made from when PF2M closed Openverse to now in a span of a few weeks, but I did not get that done in time thanks to school, PF2M was informed beforehand and didn't want to work on Openverse any more after his knowing of this. Oh well.</p>
@@ -56,12 +65,6 @@
 		<li>Yes, this doesn't have many features at the moment, but I'm working to <i>really</i> deviate from Miiverse, such as supporting Markdown and having friends, but also improving upon most of what PF2M had originally intended to do but couldn't.</li>
 		<li><a href="https://github.com/ariankordi/closedverse">This is an open-source project!</a> Anyone can view the code that runs this very site and make improvements if they wanted to. I don't have anything to hide.</li>
 		</ul>
-
-        <h2>Suck</h2>
-        <div class="guide-img6">
-          <img src="https://d13ph7xrk1ee39.cloudfront.net/img/official_user.png">
-          <p>lol</p>
-        </div>
         
       </div>
     </div>
