Drawings are better now.

--- a/closedverse_main/templates/closedverse_main/elements/comment-form.html
+++ b/closedverse_main/templates/closedverse_main/elements/comment-form.html
@@ -8,7 +8,7 @@
 			<li><label class="textarea-menu-text">
 				<input type="radio" name="_post_type" value="body">
 			</label></li>
-			<li><label class="textarea-menu-memo checked" data-modal-open="#memo-drawboard-page">
+			<li><label class="textarea-menu-memo checked">
 			<input type="radio" name="_post_type" value="painting">
 			</label></li>
 		</menu>
