--- a/closedverse_main/templates/closedverse_main/layout.html
+++ b/closedverse_main/templates/closedverse_main/layout.html
@@ -77,7 +77,7 @@
 			<p><a href="https://ariankordi.net/">My website</a></p>
 			<p><a href="https://github.com/ariankordi/closedverse">GitHub</a></p>
 			<p id="copyright"><a href="https://miiverse.nintendo.net/">Inspired by Hatena Co, Ltd/Nintendo's Miiverse. I don't nor wish to make money from this. Please support them as they deserve your business.</a><br>
-			<a href="https://getfedora.org/"><img class="fimg" src="https://i.imgur.com/KYUMjTN.png" alt="[ Powered by Fedora ]" width="88" height="31"></a></p>
+			<a href="https://getfedora.org/"><img src="https://i.imgur.com/KYUMjTN.png" alt="[ Powered by Fedora ]"> &nbsp;<img src="https://i.imgur.com/4SGvmY3.png"></a></p>
 			</div>
         </div>
       </div>
